# KeyBase

./: .gitignore  LICENSE  README.md  build.bat  build.ps1  build.sh  run.bat
Builder/: Cargo.toml  build.bat  build.rs  builder.rc
Builder/assets/: config.yml.example
Builder/src/: app.rs  config_gen.rs  i18n.rs  install.rs  main.rs  platform.rs  selftest.rs  ui.rs  ui_gui.rs  wizard.rs
Client-Test/: index.html  serve.py
server/: pyproject.toml  requirements.txt  run.sh
server/assets/: keybase-fingerprint.js
server/keybase/: __init__.py  __main__.py  admin_actions.py  app.py  core.py  db.py  db_migrate.py  rate_limit.py  translations.py
server/keybase/templates/layouts/: admin_shell.html  error_page.html
server/keybase/templates/pages/: login.html  setup.html
server/keybase/templates/static/: admin.css  admin.js
