[package]
name = "keybase-builder"
version = "0.1.0"
edition = "2021"
description = "Key Base installer and setup wizard for the self-hosted server"
authors = ["DoxSense"]
license = "MIT"
repository = "https://github.com/LouSkull/KeyBase"
homepage = "https://github.com/LouSkull/KeyBase"
publish = false
build = "build.rs"

[[bin]]
name = "keybase-builder"
path = "src/main.rs"

[dependencies]
ratatui      = "0.29"
crossterm    = "0.28"
reqwest      = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "stream", "gzip"] }
zip          = { version = "2.2", default-features = false, features = ["deflate"] }
anyhow       = "1"
which        = "7"
dirs         = "5"
sha2         = "0.10"
hex          = "0.4"
chrono       = "0.4"
serde        = { version = "1", features = ["derive"] }
rand         = "0.8"
bcrypt       = "0.15"

# GUI (Windows only) — egui wizard window
[target.'cfg(windows)'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu"] }
egui   = "0.29"
rfd    = { version = "0.14", default-features = false, features = ["file-handle-inner"] }

[profile.release]
opt-level   = 3
lto         = true
strip       = true
codegen-units = 1
