[project]
name = "key-base"
version = "0.1.0"
description = "FastAPI license-key server with an admin console"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2",
    "psycopg[binary]>=3.1",
    "pymysql>=1.1",
]

[tool.uv]
package = false
